--- a/style.css
+++ b/style.css
@@ -4,16 +4,41 @@
     margin: 0;
 }
 
+html {
+    font-family: 'Roboto', sans-serif;;
+}
+
 div.container {
     width: 50%;
     margin: auto;
-    padding: 10px 0;
 }
 
-.container > header {
-    height: 70px;
-    background-color: rgb(215, 129, 224);
+
+header .logo {
+    width: 15%;
+    padding-right: 5px;
+    border-right: 0.5px solid lightgray;
+    margin-bottom: 10px;
 }
+
+.logo > img {
+    width: 100%;
+}
+
+nav > ul > li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+nav > ul a {
+    text-decoration: none;
+    color: gray;
+    text-transform: uppercase;
+    font-size: 13px;
+    
+}
+
+
 
 .container > main > section {
     margin-top: 10px;
@@ -47,8 +72,8 @@ section > .float-lf, section > .float-rh {
 }
 
 main > section > .float-c {
-    width: 58%; /* 100% -(i margini) - (le due sezioni laterali) */
-    margin: 0 1%;
+    width: calc(100% - 40% - 20px); /* 100% -(i margini) - (le due sezioni laterali) */
+    margin: 0 10px;
 }
 
  div.float-lf, div.float-c, div.float-rh {
