--- a/style.css
+++ b/style.css
@@ -9,16 +9,15 @@ html {
 }
 
 div.container {
-    width: 50%;
+    width: 65%;
     margin: auto;
 }
-
 
 header .logo {
     width: 15%;
     padding-right: 5px;
     border-right: 0.5px solid lightgray;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .logo > img {
@@ -34,19 +33,24 @@ nav > ul a {
     text-decoration: none;
     color: gray;
     text-transform: uppercase;
-    font-size: 13px;
-    
+    font-size: 13px;    
 }
-
-
 
 .container > main > section {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
-main > section.background {
-    background-color: rgb(224, 214, 134);
-    height: 250px;
+main > section.hero {
+    background-image: url(img/banner.jpg);
+    background-position: center;
+    background-size: 80%;
+    padding: 200px 0 30px 30px;
+    border-radius: 10px;
+}
+
+.hero > div {
+    width: 60%;
+    color: black;
 }
 
 main > section.clearflix::after {
@@ -61,10 +65,10 @@ main > section.background-lb {
     margin-bottom: 5px;
 }
 
-section > div:first-child {
+/* section > div:first-child {
     height: 50px;
     background-color: rgb(178, 206, 228);
-    margin-bottom: 10px;
+    margin-bottom: 10px; */
 }
 
 section > .float-lf, section > .float-rh {
